<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    tools:context=".MainActivity"
    tools:openDrawer="">

    <LinearLayout
        android:id="@+id/content1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/home_background"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/btn_toolbar"
            android:background="#00000000" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/toolbar">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <RelativeLayout
                                android:layout_width="90dp"
                                android:layout_height="90dp"
                                android:layout_margin="8dp"
                                android:background="@drawable/card_1"
                                android:elevation="8dp"
                                android:gravity="center">

                                <ImageView
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    android:layout_centerInParent="true"
                                    android:src="@drawable/heart_filled" />

                            </RelativeLayout>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_horizontal"
                                android:text="@string/general"
                                android:textAlignment="center" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <RelativeLayout
                                android:layout_width="90dp"
                                android:layout_height="90dp"
                                android:layout_margin="8dp"
                                android:background="@drawable/card_2"
                                android:elevation="8dp"
                                android:gravity="center">

                                <ImageView
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    android:layout_centerInParent="true"
                                    android:src="@drawable/heart_filled" />

                            </RelativeLayout>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_horizontal"
                                android:text="@string/fashion"
                                android:textAlignment="center" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <RelativeLayout
                                android:layout_width="90dp"
                                android:layout_height="90dp"
                                android:layout_margin="8dp"
                                android:background="@drawable/card_3"
                                android:elevation="8dp"
                                android:gravity="center">

                                <ImageView
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    android:layout_centerInParent="true"
                                    android:src="@drawable/heart_filled" />

                            </RelativeLayout>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_horizontal"
                                android:text="@string/electronics"
                                android:textAlignment="center" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <RelativeLayout
                                android:layout_width="90dp"
                                android:layout_height="90dp"
                                android:layout_margin="8dp"
                                android:background="@drawable/card_4"
                                android:elevation="8dp"
                                android:gravity="center">

                                <ImageView
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    android:layout_centerInParent="true"
                                    android:src="@drawable/heart_filled" />

                            </RelativeLayout>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_horizontal"
                                android:text="@string/groceries"
                                android:textAlignment="center" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <RelativeLayout
                                android:layout_width="90dp"
                                android:layout_height="90dp"
                                android:layout_margin="8dp"
                                android:background="@drawable/card_5"
                                android:elevation="8dp"
                                android:gravity="center">

                                <ImageView
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    android:layout_centerInParent="true"
                                    android:src="@drawable/heart_filled" />

                            </RelativeLayout>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_horizontal"
                                android:text="@string/medicines"
                                android:textAlignment="center" />

                        </LinearLayout>

                    </LinearLayout>

                </HorizontalScrollView>

                <ViewFlipper
                    android:id="@+id/viewFlipper"
                    android:layout_width="400dp"
                    android:layout_height="500dp"
                    android:layout_margin="5dp"
                    android:autoStart="true"
                    android:flipInterval="2000" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:background="@drawable/sincityred"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/twitter_btn"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                app:srcCompat="@drawable/twitter_white" />

            <ImageView
                android:id="@+id/fb_btn"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/facebook" />

            <ImageView
                android:id="@+id/insta_btn"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                app:srcCompat="@drawable/instagram" />

        </RelativeLayout>

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>